// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Poster renders correctly with img 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Poster
    path="/mUrkppyahzk6koYFekxeu0tmcPd.jpg"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <img
        alt="poster"
        src="https://image.tmdb.org/t/p/w640/mUrkppyahzk6koYFekxeu0tmcPd.jpg"
      />,
      "className": "poster",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "alt": "poster",
        "src": "https://image.tmdb.org/t/p/w640/mUrkppyahzk6koYFekxeu0tmcPd.jpg",
      },
      "ref": null,
      "rendered": null,
      "type": "img",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <img
          alt="poster"
          src="https://image.tmdb.org/t/p/w640/mUrkppyahzk6koYFekxeu0tmcPd.jpg"
        />,
        "className": "poster",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "alt": "poster",
          "src": "https://image.tmdb.org/t/p/w640/mUrkppyahzk6koYFekxeu0tmcPd.jpg",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Poster renders correctly without img 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Poster
    path=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="poster-none"
      >
        <i
          aria-hidden="true"
          className="fa fa-film"
        />
      </div>,
      "className": "poster",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <i
          aria-hidden="true"
          className="fa fa-film"
        />,
        "className": "poster-none",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "aria-hidden": "true",
          "className": "fa fa-film",
        },
        "ref": null,
        "rendered": null,
        "type": "i",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="poster-none"
        >
          <i
            aria-hidden="true"
            className="fa fa-film"
          />
        </div>,
        "className": "poster",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": <i
            aria-hidden="true"
            className="fa fa-film"
          />,
          "className": "poster-none",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "aria-hidden": "true",
            "className": "fa fa-film",
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
